# dike

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  renovate.json  ruff.toml  search.html  sitemap.xml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  codecov.yaml
.github/workflows/: codeql-analysis.yml  maschinenbau.yml  pre-commit-autoupdate.yml  release.yml  renovatebot.yml  ruff.yml  security-scans.yml  test.yml
aiodike/: __init__.py
api/: index.html
contributing/: index.html
decoweb/: __init__.py
dike/: __init__.py  _batch.py  _limit_jobs.py  _retry.py
docs/: api.md  contributing.md  installation.md  usage.md
examples/ml_prediction_service/: Dockerfile  api.py
history/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_batch.py  test_limit_jobs.py  test_retry.py  test_wrap_in_coroutine.py
usage/: index.html
