[tool]
[tool.poetry]
name = "dike"
version = "1.0.0"
homepage = "https://github.com/chr1st1ank/dike"
description = "Python asyncio tools for web service resilience."
authors = ["Christian Krudewig <chr1st1ank@krudewig-online.de>"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: OS Independent',
    'Framework :: AsyncIO'
]
packages = [
    { include = "dike" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"

[tool.poetry.extras]
test = [
    "pytest",
    "phmdoctest",
    "pytest-cov",
    "yamllint"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
docutils = { version = "0.21", python = "3.9" }  # Necessary to manually add because of https://github.com/pypa/twine/issues/1082
bump2version = "^1.0"
fastapi = {version = "^0.88"}
httpcore = "^0.16"
httpx = "^0.23"
invoke = "^2.0.0"
mkapi = { version = "*" }
mkdocs = { version = "^1.4" }
mkdocs-autorefs = { version = "*" }
mkdocs-include-markdown-plugin = { version = "*" }
numpy = "~1.21"
phmdoctest = "^1.2"
pip = { version = "*" }
pre-commit = { version = "^2.20" }
pytest = "^7.1"
pytest-cov = { version = "*" }
pytest-parametrized = "^1.4"
safety = "^2.3"
toml = { version = "*" }
tox = { version = "*" }
twine = { version = "*" }
uvicorn = "^0.20"
virtualenv = { version = "^20.16" }
yamllint = "*"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
pymdown-extensions = "^9.7"
mkdocs = "^1.4"
mkdocs-include-markdown-plugin = { version = "^4.0", python = "3.9" }
mkapi = "^1.0"
mkdocs-autorefs = "^0.4"


[tool.poetry.group.test.dependencies]
xdoctest = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
