[project]
name = "dike"
version = "1.0.0"
homepage = "https://github.com/chr1st1ank/dike"
description = "Python asyncio tools for web service resilience."
authors = [{ name = "Christian Krudewig", email = "chr1st1ank@krudewig-online.de" }]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: OS Independent',
    'Framework :: AsyncIO'
]
packages = [
    { include = "dike" },
    { include = "tests", format = "sdist" },
]
requires-python = ">=3.7.1,<4.0"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "phmdoctest",
    "pytest-cov",
    "yamllint",
    "xdoctest~=1.1"
]
dev = [
    'docutils; python_version == "3.9"',
    'bump2version ~= 1.0',
    'fastapi ~= 0.88',
    'httpcore ~= 0.16',
    'httpx ~= 0.23',
    'invoke ~= 2.0.0',
    'mkapi',
    'mkdocs ~= 1.4',
    'mkdocs-autorefs',
    'mkdocs-include-markdown-plugin',
    'numpy ~= 1.21',
    'phmdoctest ~= 1.2',
    'pre-commit ~= 2.20',
    'pytest ~=8.3',
    'pytest-cov',
    'pytest-parametrized ~= 1.4',
    'safety ~= 2.3',
    'toml',
    'tox',
    'twine',
    'uvicorn ~= 0.20',
    'yamllint'
]
doc = [
    'pymdown-extensions ~= 9.7',
    'mkdocs ~= 1.4',
    'mkdocs-include-markdown-plugin ~= 4.0; python_version == "3.9"',
    'mkapi ~= 1.0',
    'mkdocs-autorefs ~= 0.4',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
